added icons and shapes

--- a/versal.html
+++ b/versal.html
@@ -17,19 +17,19 @@
   </div>
 
   <div class="shape-buttons">
-    <button onclick="addRect()">Add Rect</button>
-    <button onclick="addCircle()">Add Circle</button>
-    <button onclick="addTriangle()">Add Triangle</button>
-    <button onclick="addLine()">Add Line</button>
+    <button onclick="addRect()"><div class='add-rect'></div></button>
+    <button onclick="addCircle()"><div class='add-circle'></div></button>
+    <button onclick="addTriangle()"><div class='add-triangle'></div></button>
+    <button onclick="addLine()"><div class='add-line'></div></button>
     <br>
     <input type="text" class="text">
     <button onclick="addText()">Add Text</button>
   </div>
 
   <div class="edit-buttons">
-    <button class="btn" id="bring-to-front" title="Bring to Front"><i class="icon-fast-backward rotate" style="height:19px;">bring-to-front</button>
-    <button class="btn" id="send-to-back" title="Send to Back"><i class="icon-fast-forward rotate" style="height:19px;">send-to-back</button>
-    <button id="remove-selected" class="btn" title="Delete selected item"><i class="icon-trash" style="height:19px;">delete</button>
+    <button class="btn" id="bring-to-front" title="Bring to Front"><img src='assets/img/bring-to-front.svg' class='bring-to-front-icon'/></button>
+    <button class="btn" id="send-to-back" title="Send to Back"><img src='assets/img/send-to-back.svg' class='send-to-back-icon'/></button>
+    <button id="remove-selected" class="btn" title="Delete selected item"><img src='assets/img/delete.svg' class='delete-icon'/></button>
   </div>
 
   <div class='nothing'>
