--- a/versal.html
+++ b/versal.html
@@ -21,9 +21,7 @@
     <button onclick="addCircle()"><div class='add-circle'></div></button>
     <button onclick="addTriangle()"><div class='add-triangle'></div></button>
     <button onclick="addLine()"><div class='add-line'></div></button>
-    <br>
-    <input type="text" class="text">
-    <button onclick="addText()">Add Text</button>
+    <input type="text" class="text"><button onclick="addText()">Add Text</button>
   </div>
 
   <div class="edit-buttons">
@@ -34,6 +32,7 @@
 
   <div class='nothing'>
   </div>
+  <br>
   <canvas id="c"></canvas>
 
 </body>
