added new icons

--- a/versal.html
+++ b/versal.html
@@ -28,9 +28,9 @@
     <button class="btn" id="bring-to-front" title="Bring to Front"><img src='assets/img/bring-to-front.svg' class='bring-to-front-icon'/></button>
     <button class="btn" id="send-to-back" title="Send to Back"><img src='assets/img/send-to-back.svg' class='send-to-back-icon'/></button>
     <button id="remove-selected" class="btn" title="Delete selected item"><img src='assets/img/delete.svg' class='delete-icon'/></button>
-    
-    <button id="clear-all" class="btn" title="Delete selected item"><img src='assets/img/delete.svg' class='delete-icon'/>Clear All</button>
-    <button id="save-all" class="btn" title="Delete selected item"><img src='assets/img/delete.svg' class='delete-icon'/>Save </button>
+
+    <button id="clear-all" class="btn" title="Clear All"><img src='assets/img/clear.svg' class='delete-icon'/></button>
+    <button id="save-all" class="btn" title="Save Diagram"><img src='assets/img/save.svg' class='delete-icon'/></button>
 
   </div>
 
