title is editable in place

--- a/versal.html
+++ b/versal.html
@@ -11,9 +11,9 @@
 
 <body>
 
-  <h1 class="title">Diagram</h1>
+  <h1 class="title diagramName" contenteditable >Diagram</h1>
   <div>
-    <input type="text" class='diagramName'>
+<!--    <input type="text" class='diagramName'>-->
   </div>
 
   <div class="shape-buttons">
