--- a/versal.html
+++ b/versal.html
@@ -21,14 +21,13 @@
     <button onclick="addCircle()"><div class='add-circle'></div></button>
     <button onclick="addTriangle()"><div class='add-triangle'></div></button>
     <button onclick="addLine()"><div class='add-line'></div></button>
-    <input type="text" class="text"><button onclick="addText()">Add Text</button>
+    <input type="text" class="text" placeholder='Add text'><button onclick="addText()">Add Text</button>
   </div>
 
   <div class="edit-buttons">
     <button class="btn" id="bring-to-front" title="Bring to Front"><img src='assets/img/bring-to-front.svg' class='bring-to-front-icon'/></button>
     <button class="btn" id="send-to-back" title="Send to Back"><img src='assets/img/send-to-back.svg' class='send-to-back-icon'/></button>
     <button id="remove-selected" class="btn" title="Delete selected item"><img src='assets/img/delete.svg' class='delete-icon'/></button>
-
     <button id="clear-all" class="btn" title="Clear All"><img src='assets/img/clear.svg' class='delete-icon'/></button>
     <button id="save-all" class="btn" title="Save Diagram"><img src='assets/img/save.svg' class='delete-icon'/></button>
 
