--- a/versal.html
+++ b/versal.html
@@ -22,7 +22,7 @@
     <button onclick="addTriangle()"><div class='add-triangle'></div></button>
     <button onclick="addLine()"><div class='add-line'></div></button>
     <br>
-    <input type="text" class="text">
+    <input type="text" class="text" id='add-text-input'>
     <button onclick="addText()">Add Text</button>
   </div>
 
@@ -43,7 +43,7 @@
 </body>
 
 <script src='assets/js/app.js'></script>
-<script src='assets/js/moreapp.js'></script>
+<script src='assets/js/persistance.js'></script>
 
 
 </html>
