added free draw line

--- a/versal.html
+++ b/versal.html
@@ -19,7 +19,7 @@
     <button onclick="addRect()"><div class='add-rect'></div></button>
     <button onclick="addCircle()"><div class='add-circle'></div></button>
     <button onclick="addTriangle()"><div class='add-triangle'></div></button>
-    <button onclick="addLine()"><div class='add-line'></div></button>
+    <button id='free-draw-line'><div class='add-line'></div></button>
 
     <input type="text" class="text" id='add-text-input' placeholder='Add text'><button onclick="addText()" class='add-text'>+</button>
 
