uped the version, added text to version.html

--- a/versal.html
+++ b/versal.html
@@ -49,6 +49,9 @@
   <br>
   <canvas id="c"></canvas>
 
+  <p> &copy; Ste & Dvid </p>
+  <p><a href="https://github.com/dvidsilva/versalgraph" target="_blank">Click here for help questions and improvements. </a></p>
+  
 </body>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
